# flights-mcp-server

./: agent.py  agent_gemini.py  flights.py  hotels.py  load_mcp.py  pyproject.toml
backend/: requirements.txt  server.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx
frontend/lib/: api.ts
