[project]
name = "google-flights-mcp-server"
version = "0.1.0"
description = "Google Flights MCP Server !!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fast-flights>=2.2",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "mcp[cli]>=1.3.0",
]
